# rosy

./: .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  COMPARISON.md  Cargo.toml  FEEDBACK.md  README.md  basic.fox  basic.rosy  davector.ssv  flake.nix  manual.md  nested.rosy  priorities.md  qsort.rosy  rosy.pest  run.pbs  test.fox  test.rosy  test_mult.rosy  types.fox  vector.rosy  vector.ssv  vector2.ssv
.dacelib_comp/benchmarks/: 02_da_multiply_t3.cpp  02_da_multiply_t4.cpp  03_da_trig_t3.cpp  03_da_trig_t4.cpp  12_da_derivatives_t3.cpp  12_da_derivatives_t4.cpp  14_da_transfer_map_t3.cpp  14_da_transfer_map_t4.cpp  15_da_high_order_multiply_t3.cpp  15_da_high_order_multiply_t4.cpp  16_da_bending_magnet_t3.cpp  16_da_bending_magnet_t4.cpp  17_da_aberration_t3.cpp  17_da_aberration_t4.cpp  CMakeLists.txt  run_3way_comparison.sh  run_best_of_50.sh  run_best_of_n.sh  run_comparison.sh
rosy/: Cargo.toml  build.rs  codegen.rs  operator_codegen.rs
rosy/assets/: expressions_docs.md  rosy.pest  statements_docs.md
rosy/assets/editors/vscode/: extension.js  language-configuration.json  package.json
rosy/assets/editors/zed/: .gitignore  Cargo.toml  extension.toml
rosy/assets/expressions/abs/: abs.expected  abs_doc.md
rosy/assets/expressions/acos/: acos.expected  acos.fox  acos_doc.md
rosy/assets/expressions/add/: add.fox  add_doc.md
rosy/assets/expressions/asin/: asin_doc.md
rosy/assets/expressions/atan/: atan.expected  atan_doc.md
rosy/assets/expressions/boolean/: boolean.fox  boolean.rosy  boolean_doc.md
rosy/assets/expressions/cd/: cd.rosy  cd_doc.md
rosy/assets/expressions/cmplx/: cmplx.fox  cmplx.rosy  cmplx_doc.md
rosy/assets/expressions/complex_convert/: complex_convert.rosy  complex_convert_doc.md
rosy/assets/expressions/concat/: concat.fox  concat.rosy  concat_doc.md
rosy/assets/expressions/conj/: conj_doc.md
rosy/assets/expressions/cons/: cons.rosy  cons_doc.md
rosy/assets/expressions/cos/: cos.fox  cos_doc.md
rosy/assets/expressions/cosh/: cosh.expected  cosh.fox  cosh.rosy  cosh_doc.md
rosy/assets/expressions/da/: da.fox  da_doc.md
rosy/assets/expressions/derive/: derive.fox  derive.rosy  derive_doc.md
rosy/assets/expressions/div/: div.rosy  div_doc.md
rosy/assets/expressions/eq/: eq.rosy  eq_doc.md
rosy/assets/expressions/exp/: exp.rosy  exp_doc.md
rosy/assets/expressions/extract/: extract_doc.md
rosy/assets/expressions/gt/: gt.fox  gt_doc.md
rosy/assets/expressions/gte/: gte.rosy  gte_doc.md
rosy/assets/expressions/imag_fn/: imag_fn.expected  imag_fn.fox  imag_fn_doc.md
rosy/assets/expressions/int_fn/: int_fn.fox  int_fn_doc.md
rosy/assets/expressions/isrt/: isrt.fox  isrt_doc.md
rosy/assets/expressions/isrt3/: isrt3.expected  isrt3.rosy  isrt3_doc.md
rosy/assets/expressions/lcd/: lcd.rosy  lcd_doc.md
rosy/assets/expressions/lcm/: lcm.fox  lcm.rosy  lcm_doc.md
rosy/assets/expressions/length/: length.fox  length_doc.md
rosy/assets/expressions/log/: log.fox  log_doc.md
rosy/assets/expressions/logical_convert/: logical_convert_doc.md
rosy/assets/expressions/lst/: lst_doc.md
rosy/assets/expressions/lt/: lt.rosy  lt_doc.md
rosy/assets/expressions/lte/: lte.rosy  lte_doc.md
rosy/assets/expressions/ltrim/: ltrim_doc.md
rosy/assets/expressions/mult/: mult.rosy  mult_doc.md
rosy/assets/expressions/neg/: neg.fox  neg_doc.md
rosy/assets/expressions/neq/: neq.fox  neq.rosy  neq_doc.md
rosy/assets/expressions/nint/: nint.rosy  nint_doc.md
rosy/assets/expressions/norm/: norm.rosy  norm_doc.md
rosy/assets/expressions/not/: not_doc.md
rosy/assets/expressions/number/: number.fox  number_doc.md
rosy/assets/expressions/pow/: pow.fox  pow.rosy  pow_doc.md
rosy/assets/expressions/re_convert/: re_convert.fox  re_convert_doc.md
rosy/assets/expressions/real_fn/: real_fn.fox  real_fn_doc.md
rosy/assets/expressions/sin/: sin.expected  sin.fox  sin.rosy  sin_doc.md
rosy/assets/expressions/sinh/: sinh.expected  sinh.fox  sinh.rosy  sinh_doc.md
rosy/assets/expressions/sqr/: sqr.expected  sqr_doc.md
rosy/assets/expressions/sqrt/: sqrt.fox  sqrt_doc.md
rosy/assets/output_template/: Cargo.toml  main.rs
rosy/assets/write_test/: write_test.fox
rosy/src/: ast.rs  embedded.rs  errors.rs  lib.rs  main.rs  manifest.rs  preprocess.rs  resolve.rs  syntax_config.rs  transpile.rs  update_check.rs
rosy/src/ast/: mod.rs
rosy/src/lsp/: analysis.rs  mod.rs  server.rs
rosy/src/program/: mod.rs
rosy/src/resolve/: apply.rs  discovery.rs  mod.rs  resolve_graph.rs
rosy/src/rosy_lib/: macros.rs  mod.rs  mpi.rs
rosy/src/statements/: assign.rs  da_init.rs  function.rs  function_call.rs  if.rs  loop.rs  mod.rs  ploop.rs  procedure.rs  procedure_call.rs  read.rs  var_decl.rs  write.rs
rosy/src/transpile/: mod.rs
rosy_ide_tools/vscode_extension_generator/: Cargo.toml  README.md
rosy_ide_tools/vscode_extension_generator/src/: main.rs
(+1857 files in other folders)
