[workspace]
resolver = "3"
members = [
    "rosy",
    "rosy_ide_tools/vscode_extension_generator"
]
exclude = [ ".rosy_output" ]

[workspace.dependencies]
anyhow = "1.0"
pest = "2.7"
pest_derive = "2.7"
lazy_static = "1.4"
impls = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
serial_test = "3.2"
mpi = "0.8"
dace = "0.2"
bincode = "2.0"