[workspace]
resolver = "3"
members = [
    "rosy",
    "rosy_lsp",
]
exclude = [ ".rosy_output", ".rosy_test_cache" ]

[workspace.dependencies]
anyhow = "1.0"
pest = "2.7"
pest_derive = "2.7"
lazy_static = "1.4"
impls = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
serial_test = "3.2"
num-complex = "0.4"
rand = "0.9"
rustc-hash = "2"