[package]
name = "rosy_transpiler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
pest.workspace = true
pest_derive.workspace = true
lazy_static.workspace = true
impls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serial_test.workspace = true
# Dependencies that were in rosy_lib
mpi.workspace = true
bincode.workspace = true
dace.workspace = true