[package]
name = "rosy"
version = "0.8.0"
edition = "2024"

[features]
nightly-simd = []

[dependencies]
anyhow.workspace = true
pest.workspace = true
pest_derive.workspace = true
lazy_static.workspace = true
impls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serial_test.workspace = true
clap = { version = "4.5", features = ["derive"] }
semver = "1"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }

# Dependencies that were in rosy_lib
num-complex.workspace = true
rustc-hash.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("mpi", "nightly-simd"))'] }

[build-dependencies]
regex = "1"