[package]
name = "vscode_extension_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_vscode_extension"
path = "src/main.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"